--- a/styles.css
+++ b/styles.css
@@ -68,23 +68,33 @@ gap: 15px;
 }
 
 .epic {
-    width: 100%;
+    display: flex;
+    align-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
+
+.diogenes {
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    margin-top: 50px;
 }
 
 .epicText {
-    margin-left: 100px;
-    margin-top: -17px;
+   text-align: center;
 
     
 }
 
 .dio {
-    width: 100%;
-    margin-left: 750px;
+    text-align: center;
 }
 .title {
     text-align: center;
     color: forestgreen;
+    margin-bottom: 50px;
 }
 
 .relativism {
