--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     color: rgb(210, 57, 30);
     
     border-color: black;
-    margin-right: 350px;
+    margin-right: 400px;
     margin-left: auto;
     width: 300px;
     text-align: center;
@@ -37,12 +37,29 @@
     color: rgb(210, 57, 30);
    
     border-color: black;
-    margin-right: 425px;
+    margin-right: 475px;
     margin-left: auto;
     width: 300px;
     text-align: center;
     
 }
+
+.titles {
+  width: 100%;
+  margin-left: 200px;
+    
+}
+
+.odinImage {
+    
+    display: block;
+    width: 10%;
+    margin: auto;
+    
+}
+
+  
+
 .crepes {
     color: brown;
     font-weight: 900;
@@ -56,8 +73,8 @@
 
 .list {
     
-    margin-right: auto;
-    margin-left: 525px;
+    margin-right: 380px;
+    margin-left: auto;
     width: 200px;
     padding: auto;
     list-style-type: none;
@@ -187,11 +204,7 @@ gap: 15px;
     background-color: darkkhaki;
 }
 
-.odinImage {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 
 
